# Matrix

./: .gitignore  CMakeLists.txt  README.md
include/: double_comparison.hpp  exceptions.hpp  matrix.hpp  matrix_iterator.hpp  my_concepts.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/end2end/: test_runner.sh
tests/end2end/include/: end2end.hpp
tests/end2end/src/: main.cpp
tests/unit/: base_operations.cpp  main.cpp  matrix_validati.cpp  multiplication.cpp  transpose.cpp
